# fastapi-novelweb-backend

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  api.py  api_summary.txt  pyproject.toml  requirements.txt  test_api.py
.github/workflows/: format.yml  publish.yml  scan.yml
examples/payloads/: colorize.json  declutter.json  emotion.json  lineart.json  nai3.json  nai4.5.json  nai4.5_cur.json  nai4.5_cur_multi_char.json  nai4.5_img2img.json  nai4.json  nai4_cur.json  nai4_cur_vibe_transfer.json  nai4_mult_char_w_pos.json  sketch.json
examples/requests/: README.md  background_removal.py  change_emotion.py  colorize.py  declutter.py  generate_v3.py  generate_v4.py  generate_v4_5.py  generate_v4_5_multi_char.py  generate_v4_5_stream.py  lineart.py  requirements.txt  sketch.py  vibe-encode.py  vibe_transfer.py
nekoai/: __init__.py  __main__.py  client.py  constant.py  exceptions.py  utils.py
nekoai/main/: Metadata.py  initial.py  简单图片生成.py
nekoai/types/: __init__.py  constant.py  director.py  image.py  metadata.py  parameters.py  user.py
src/components/: HelloWorld.vue
